# EdgePack-Federated-Multi-Agent-Packing-System-with-On-Device-RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
edgepack/: __init__.py
edgepack/crypto/: __init__.py  encryption.py
edgepack/federated/: __init__.py  federated.py
edgepack/mlops/: __init__.py  mlops.py
edgepack/quantization/: __init__.py  budget.py  workflow.py
edgepack/rag/: __init__.py  embeddings.py  pipeline.py  vector_store.py
edgepack/router/: __init__.py  model_router.py
scripts/: demo_rag.py  deploy_policy.py  quantize_model.py  run_federated_round.py
tests/: test_crypto_and_store.py  test_federated.py  test_quantization_and_mlops.py  test_router_and_rag.py
